# power_manager

./: .dockerignore  .gitignore  Dockerfile.logger  Dockerfile.webserver  docker-compose.yml  docker_build.sh  logger.sh  pyproject.toml  webserver.sh
.github/workflows/: logger.yml  webserver.yml
logs/ac/: 2022-12-19_ac_log.csv  2022-12-20_ac_log.csv  2022-12-21_ac_log.csv
logs/solar/: 2022-11-01_solar_log.csv  2022-12-01_solar_log.csv
src/: ac.py  ac_handler.py  asd.py  database.py  forms.py  logger.py  logger_test.py  migrate_csv_to_sql.py  plotter.py  power_meter.py  solar.py  testdb.py  webserver.py
src/frontend/: .eslintrc.json  bun.lockb  package.json  tsconfig.json
src/frontend/public/: index.html  manifest.json
src/frontend/src/: AcPlot.tsx  AcSetter.tsx  App.test.tsx  App.tsx  SolarPlot.tsx  SolarSum.tsx  acSet.tsx  acplot.tsx  solarplot.tsx  styles.css
src/frontend/src/components/: AcModeSelector.tsx  Button.tsx  Loader.tsx  LoadingSpinner.tsx  Slider.tsx  ToggleSwitch.tsx  slider.css
src/frontend/src/hooks/: useChartData.ts  usePreviusEffect.ts  useSumSolarData.ts
src/frontend/src/utilities/: format.ts
src/logger/: ac.py  logger.py  solar.py
src/templates/: home.html  setup.html
src/webserver/: forms.py  main.py  plotter.py
src/webserver/templates/: home.html
